# Resume_chat

./: .gitignore  README.md  ingestion.py  pdf_to_text.py  pyproject.toml
backend/: api.py
backend/app/: chat.py  models.py
frontend/: front_chat.py
resuchat/: pyproject.toml
resuchat/src/resuchat/: __init__.py  docker-compose.yaml
resuchat/src/resuchat/backend/: Dockerfile  api.py  chat.py  ingestion.py  models.py  pdf_to_text.py  pyproject.toml
resuchat/src/resuchat/data/: CV - Linus Johansson .txt  _Graduate Trainee Resume.txt  linus_johansson.txt
resuchat/src/resuchat/frontend/: Dockerfile  front_chat.py  pyproject.toml
src/Resuchat/backend/app/: chat.py
utils/: helpers.py
