[project]
name = "resume-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "google-genai>=1.60.0",
    "google-generativeai>=0.8.6",
    "joblib>=1.5.3",
    "lancedb>=0.27.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.44.0",
    "pypdf>=6.6.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]
