[project]
name = "resuchat"
version = "0.1.0"
description = "dockerize Resumechat project"
readme = "README.md"
authors = [{ name = "Nverest", email = "linusjohaan@gmail.com" }]
requires-python = ">=3.11"

dependencies = ["backend", "frontend"]

[tool.uv.sources]
backend = { workspace = true }
frontend = { workspace = true }

[tool.uv.workspace]
members = ["src/resuchat/frontend", "src/resuchat/backend"]
